Correction alignement formulaire page accueil

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -74,6 +74,8 @@ header {
 
         label {
             height: auto;
+            text-align: center;
+            
             span {
                 position: absolute;
                 height: 1.25rem;
